@@ -2,7 +2,12 @@
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
-*portage-2.0.49_pre19 (20 Aug 2003): Fixes + security enhancements
+*portage-2.0.49 (22 Aug 2003): GRP downloading, Selinux, General Fixes
+
+  22 Aug 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Make
+  auxcache saving more friendly.
+
+*portage-2.0.49_pre20/21 (20 Aug 2003): Fixes + security enhancements
 
   20 Aug 2003; Nicholas Jones <carpaski@gentoo.org> portage.py: Fix for
   auxcache saving.
